--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 asgiref == 3.3.0
+astroid == 2.4.2
+beautifulsoup4 == 4.9.3
+colorama == 0.4.4
 Django == 3.1.3
+django-bootstrap4 == 2.3.1
+isort == 5.6.4
+lazy-object-proxy == 1.4.3
+mccabe == 0.6.1
+mysqlclient == 2.0.1
 pip == 20.1.1
+pylint == 2.6.0
 pytz == 2020.4
 setuptools == 47.1.0
-sqlparse == 0.4.1
-beautifulsoup4 == 4.9.3
-django-bootstrap4 == 2.3.1
+six == 1.15.0
 soupsieve == 2.0.1
-mysqlclient == 2.0.1
+sqlparse == 0.4.1
+toml == 0.10.2
+wrapt == 1.12.1
